--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,14 @@
 blinker==1.7.0
-certifi==2023.11.17
-charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
-distlib==0.3.8
-filelock==3.13.1
-Flask==3.0.1
-heyoo==0.1.0
-idna==3.6
+Flask==3.0.2
+Flask-Login==0.6.3
+Flask-MySQLdb==2.0.0
+Flask-WTF==1.2.1
 itsdangerous==2.1.2
 Jinja2==3.1.3
-MarkupSafe==2.1.4
-platformdirs==4.2.0
-requests==2.31.0
-requests-toolbelt==1.0.0
-typing==3.7.4.3
-urllib3==2.2.0
-virtualenv==20.25.0
+MarkupSafe==2.1.5
+mysqlclient==2.2.4
+PyMySQL==1.1.0
 Werkzeug==3.0.1
+WTForms==3.1.2
